--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-inject": "^4.2.0",
+    "gulp-install": "^1.1.0",
     "gulp-nodemon": "^2.2.1",
     "wiredep": "^4.0.0"
   }
